--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "trailapp",
+  "name": "projectapp",
   "version": "1.0.0",
   "engines": {
     "node": "12.18.2",
@@ -11,7 +11,6 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "app.js"
   },
-  
   "author": "",
   "license": "ISC",
   "dependencies": {
