--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1",
+    
     "libxmljs": "^0.19.7",
-    "node-gyp": "^8.1.0"
+    "node-gyp": "^8.1.0",
+    "express": "^4.17.1"
   }
 }
